Add programmer notice

--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
     font-weight: bold;
   }
 
+  footer {
+    margin-top: 20px;
+  }
+
 </style>
 </head>
 <body >
@@ -116,6 +120,8 @@
             Play alarm sound
           </label>
           
+
+          <footer>This was made by <a href="http://andreaswildi.com" target="_blank">Andreas Wildi</a></footer>
         </div>
      </div>
   </div>
