--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     height: 100%;
   }
   
-  @media (min-width: 500px) {
+  @media (min-device-width: 768px) {
 
       .outer-wrap {
           /* I know this doesn't work in IE. */
@@ -29,15 +29,10 @@
           height: 100%;
       }
       .wrap{
-         /*  margin: 200px auto;
-        width: 80%; */
         /* I know this doesn't work in IE. */
-
-          -webkit-align-self: center;
-          align-self: center;
-    
+        -webkit-align-self: center;
+        align-self: center;
         width: 500px;
-        height: 270px;
         margin: 0 auto;
       }
 
